--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <nav class="mc-navbar">
         <i class="fa-solid fa-clapperboard mc-logo"></i>
         <div class="flex-grow-1"></div>
-        <%= link_to lists_path do %>
+        <%= link_to root_path do %>
           <div class="mc-navbar-item"><i class="fa-solid fa-list-ul"></i> All lists</div>
         <% end %>
         <%= link_to new_list_path do %>
