--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -8,7 +8,7 @@
             <img src="<%= bookmark.movie.poster_url %>" class="card-img-top" alt="<%= bookmark.movie.title %>">
             <div class="card-body">
               <h5 class="card-title"><%= bookmark.movie.title %></h5>
-              <p class="card-text text-secondary"><%= bookmark.movie.overview %>.</p>
+              <p class="card-text text-secondary"><%= bookmark.movie.overview.truncate(100) %>.</p>
               <p class="card-text"><b><%= bookmark.comment %></b></p>
               <%= link_to "Delete", bookmark_path(bookmark), class: "btn btn-danger btn-sm", data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
             </div>
@@ -23,6 +23,14 @@
       <%= f.association :movie %>
       <%= f.input :comment %>
       <%= f.submit %>
+    <% end %>
+        <h3 class="mt-3">Add a review</h3>
+    <%= simple_form_for ([@list, @review]) do |f| %>
+      <%= f.input :content %>
+      <%= f.submit %>
+    <% end %>
+    <% @list.reviews.each do |review| %>
+      <p><%= review.content %></p>
     <% end %>
   </div>
 </div>
